1.9.5:
* Client/WebUI: Import/Export WebUI settings moved from Wallet to Home page
* lib/others/peersdb: updated list of DNS seeds
* Client: Split incomming "getdata" into chunks, to prevent send buffer from overflowing
* Client: Improved way of discovering "getheaders" and "getdata" timeouts
* Client: Improved way of handling chain splits with only one branch valid
* Lib: new script verification flag "VER_CONST_SCRIPTCODE", for compatibility with recent changes in bitcoin core
* Client: Do not ban blocks only nodes, but only those that try to use bloom filtering
* Client: Do not send "sendcmpct" messages if memory pool is disabled
* Client: Fixed a DoS attack vector through a corrupt "version" message (possibly also "cmpctblock" and "inv")
* Client: New config value "CFG.Net.ExternalIP" - force external IP (only v4) to be reported in "version" messages
* Client: Do not try to save UTXO.db when chain is not synchronized, unless network has been idle for 10 minutes
* Client: Improved the algorithm of setting "common.BlockChainSynchronized"
* Wallet: "-l -ltc -segwit" will now give addresses starting from M, not from 3 (see issue #41)
* Client/WebUI: Suport for TLS connections with forced client-side authentication (https://hostname:4433/)
* Client: Removed automatic conversion of old format unspent4 to the new UTXO.db
* Client: If pong comes out but a block is still pending, timeout it and dont ask this peer for blocks again.
* Client: "CFG.UTXOSaveSec" replaced with "CFG.UTXOSave.SecondsToTake" and "CFG.UTXOSave.BlocksToHold"
* Tools/balio: added support for fetching bech32 encoded addresses (via blockchair.com)

1.9.4 - 2018-04-11
NOTE: Use older wallet version (e.g. 1.9.3) if you had wallet type 2 or 4 already generated, but have problems spending from it now.

* Added support for native segwit addresses (P2WPKH and P2WSH)
* Client: Removed extra code added to investigate "the main loop got stuck in network.Tick()" problem (seems to be fixed now)